CLAN6-158 Add credentials delete handler
